--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ dialoguer = "0.10"
 anyhow = "1.0"
 tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
 clap = { version = "4.5.40", features = ["derive"] }
+indicatif = "0.17.11"
