--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ anyhow = "1.0"
 tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
 clap = { version = "4.5.40", features = ["derive"] }
 indicatif = "0.17.11"
+url = "2.5.4"
